--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,6 +1,7 @@
 {
     "compilerOptions": {
         "lib": ["ESNext"],
+        "target": "ES5",
         "strict": false,
         "module": "CommonJS",
         "moduleResolution": "Node",
