--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,7 @@
         "esModuleInterop": false,
         "outDir": "./dist",
         "rootDir": "./src",
+        "noUnusedLocals": true,
+        "noUnusedParameters": true
     }
 }
