--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,7 +2,7 @@
     "compilerOptions": {
         "lib": ["ESNext"],
         "target": "ES5",
-        "strict": false,
+        "strict": true,
         "module": "CommonJS",
         "moduleResolution": "Node",
         "esModuleInterop": false,
