--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,9 +6,12 @@
         "module": "CommonJS",
         "moduleResolution": "Node",
         "esModuleInterop": false,
+        "allowSyntheticDefaultImports": true,
         "outDir": "./dist",
         "rootDir": "./src",
-        "noUnusedLocals": true,
-        "noUnusedParameters": true
+        // "noUnusedLocals": true,
+        "noUnusedParameters": true,
+        "declaration": true,
+        "declarationDir": "dist/types",
     }
 }
